| Summary: | ASTERISK-20039: DTMF meta-digit W missing | ||||
| Reporter: | Jeremiah Gowdy (jgowdy) | Labels: | |||
| Date Opened: | 2012-06-22 15:56:58 | Date Closed: | 2012-09-28 13:37:27 | ||
| Priority: | Minor | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Applications/General | ||
| Versions: | 10.5.1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | openSUSE 11.4 x86_64 | Attachments: | ( 0) jgowdy-wait-6-22-2012.diff | ||
| Description: | I'm not sure if this was changed intentionally or unintentionally, or perhaps it never existed, but certain legacy documentation seems to reference W as a 1 second wait in addition to w as a 500ms wait. This is common in a lot of legacy IVR and telephony systems. This minor patch adds or re-adds W. | ||||
| Comments: | By: Jeremiah Gowdy (jgowdy) 2012-06-22 15:57:22.711-0500 Add 'W' as 1 second wait, to complement w as 500ms wait. By: Rusty Newton (rnewton) 2012-06-27 18:14:31.102-0500 Can you provide links to any documentation or references in regards to the use of the W digit in older systems? Also can you verify that your patch works against trunk? By: Jeremiah Gowdy (jgowdy) 2012-07-27 13:14:13.081-0500 It seems that I was mistaken about this being a part of Asterisk, but many older telephony systems seem to use W and w, including our Dialogic based systems, FreeSWITCH, and others. So just for the sake of compatibility with dial strings from other sources, I would at least like to submit this as a feature request. http://wiki.freeswitch.org/wiki/Misc._Dialplan_Tools_send_dtmf | ||||